--- a/content/CTF/2018ctf.md
+++ b/content/CTF/2018ctf.md
@@ -1,14 +1,14 @@
 ---
-title: CTF
+title: 2018 BSidesTLV CTF
 brief: BSidesTLV Capture The Flag
 image: /images/blog/cfp.jpg
-date: 2019-03-23
+date: 2018-03-23
 draft: false
 ---
 
 # Hall of Fame
 
-##2018
+## 2018
 
 Honorable Mention: @doadam – Adam Donenfeld
 
@@ -21,7 +21,7 @@ Honorable Mention: @doadam – Adam Donenfeld
 2018 CTF
 ![](https://lh6.googleusercontent.com/miI8hCrBGo30Ju1I7ohn5X_FP90o3OtcKHsK_EXzSfZr6L96oXR3vCT8-EN17-tWii6NEfOZAnmNmovyE3-m3ghaCLBz6B7S7UEsNop0ESlyPPdmqNMLR-neshnHC5WzqlxQCwaR)
 
-One of our volunteers was kind enough to deliver a care package to the person who solved everything first! (Adam Donenfeld) – while not eligeble to win, he did solve everything first.
+One of our volunteers was kind enough to deliver a care package to the person who solved everything first! (Adam Donenfeld) – while not eligible to win, he did solve everything first.
 ![](https://lh4.googleusercontent.com/Qy1EPHMMwuxFbjYIbTm15fefnlJE1PXlv9B2Ef4OGzrDU5fTiFZtMTpbSrGp460ZRdxUshJtf6j4VKIUw63N3JdwTm_vIwK18_40ubv9mCCfDJkjFSvz7DaraSD2ouJn4XSt7fxp)
 
 ## 2018 Challenges
